--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,8 @@
 
       {{ content }}
 
+      <input placeholder="我只是一个无辜的第二个placeholder">
+        <script>alert('第二个 from script');</script>
       </section>
       <footer>
         {% if site.github.is_project_page %}
