--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,12 +11,12 @@ body {
     padding: 20px;
     text-align: center;
 }
-#submit-form input{
+#submit-form label{
     margin: 5px 0;
     padding: 5px;
     min-width: 100px;
 }
-#submit-form label,
+#submit-form input,
 #submit-form textarea {
     min-width: 100px;
     display: inline-block;
