--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,12 +15,12 @@ body {
     margin: 5px 0;
     padding: 5px;
     min-width: 100px;
+    display: inline-block;
+    vertical-align: top;
 }
 #submit-form input,
 #submit-form textarea {
-    min-width: 100px;
     display: inline-block;
-    vertical-align: top;
     min-width: 200px;
     text-align: right;
 }
