add custom style

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,7 @@ body {
 #submit-form {
     border: 1px solid #e5e5e5;
     padding: 20px;
+    margin-block-end: 1em;
 }
 #submit-form label{
     margin: 5px 5px 5px 0;
